# multi-agent-system

./: .env.example  .gitignore  BACKLOG.md  PROGRESS.md  main.py  pyproject.toml
misc/: PRODUCTION.md  QUICKSTART.md  example_client.py  redis_example.py  server.py  start_worker.sh
src/: main.py  main_redis.py  requirements.txt  test_braintrust.py
src/agents/: __init__.py  base.py  test_agent.py
src/agents/analysis/: __init__.py  financial_analyst.py  legal_reviewer.py  risk_assessor.py  tech_evaluator.py
src/agents/research/: __init__.py  company_profiler.py  competitor_scout.py  market_researcher.py  news_monitor.py  team_investigator.py
src/agents/synthesis/: __init__.py  decision_agent.py  report_generator.py
src/config/: __init__.py  agent_configs.py  settings.py
src/state/: __init__.py  enums.py  schema.py
src/workflow/: __init__.py  graph.py  nodes.py  routing.py
