[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "langgraph",
  "claude-agent-sdk",
  "grandalf>=0.8",
  "pydantic>=2.12.5",
  "braintrust-langchain>=0.2.0",
  "langchain-openai>=1.1.7",
  "python-dotenv>=1.2.1",
  "braintrust>=0.5.0",
  "openai>=2.15.0",
  "anthropic>=0.76.0",
]
